<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ut01.ex02.presentation.Ut01Ex03Activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_image"
        android:id="@+id/background"
        app:srcCompat="@drawable/tapa1"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"/>


    <ImageView
        android:layout_width="50dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_square"
        android:tint="@color/white"
        android:background="@color/white"
        android:layout_margin="@dimen/size_margin"
        android:alpha="0.7"/>

    <TextView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="18dp"
        android:text="1º"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_trophy"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="33dp"/>

    <TextView
        android:id="@+id/nameTapa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_tapa1"
        android:layout_below="@+id/background"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/size_margin_small"
        android:layout_marginLeft="@dimen/size_margin"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/barTapa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_tapa1"
        android:layout_below="@+id/nameTapa1"
        android:layout_marginTop="@dimen/size_margin_small"
        android:layout_marginLeft="@dimen/size_margin"/>

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barTapa1"
        android:text="@string/points"
        android:layout_marginTop="@dimen/size_margin_small"
        android:layout_marginLeft="@dimen/size_margin"/>

    <TextView
        android:id="@+id/mediaStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/points"
        android:layout_below="@+id/barTapa1"
        android:text="@string/media_star"
        android:layout_marginTop="@dimen/size_margin_small"
        android:layout_marginLeft="@dimen/size_margin"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_star"
        android:tint="@color/yellow"
        android:layout_below="@+id/barTapa1"
        android:layout_toRightOf="@+id/mediaStar"
        android:layout_marginTop="@dimen/size_margin_small"/>

    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_share"
        android:layout_toLeftOf="@+id/favorite"
        android:layout_below="@+id/barTapa1"
        android:layout_marginRight="@dimen/size_margin"/>

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_favorite"
        android:layout_below="@+id/barTapa1"
        android:layout_alignEnd="@+id/barTapa1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/size_margin"/>


</RelativeLayout>